rigid.h

/*
 * Initialisation
*/

int futhark_get_num_sizes(void);
const char *futhark_get_size_name(int);
const char *futhark_get_size_class(int);
struct futhark_context_config ;
struct futhark_context_config *futhark_context_config_new(void);
void futhark_context_config_free(struct futhark_context_config *cfg);
void futhark_context_config_add_build_option(struct futhark_context_config *cfg,
                                             const char *opt);
void futhark_context_config_set_debugging(struct futhark_context_config *cfg,
                                          int flag);
void futhark_context_config_set_profiling(struct futhark_context_config *cfg,
                                          int flag);
void futhark_context_config_set_logging(struct futhark_context_config *cfg,
                                        int flag);
void futhark_context_config_set_device(struct futhark_context_config *cfg, const
                                       char *s);
void futhark_context_config_set_platform(struct futhark_context_config *cfg,
                                         const char *s);
void
futhark_context_config_select_device_interactively(struct futhark_context_config *cfg);
void futhark_context_config_dump_program_to(struct futhark_context_config *cfg,
                                            const char *path);
void
futhark_context_config_load_program_from(struct futhark_context_config *cfg,
                                         const char *path);
void futhark_context_config_dump_binary_to(struct futhark_context_config *cfg,
                                           const char *path);
void futhark_context_config_load_binary_from(struct futhark_context_config *cfg,
                                             const char *path);
void
futhark_context_config_set_default_group_size(struct futhark_context_config *cfg,
                                              int size);
void
futhark_context_config_set_default_num_groups(struct futhark_context_config *cfg,
                                              int num);
void
futhark_context_config_set_default_tile_size(struct futhark_context_config *cfg,
                                             int num);
void
futhark_context_config_set_default_threshold(struct futhark_context_config *cfg,
                                             int num);
int futhark_context_config_set_size(struct futhark_context_config *cfg, const
                                    char *size_name, size_t size_value);
struct futhark_context ;
struct futhark_context *futhark_context_new(struct futhark_context_config *cfg);
struct futhark_context
*futhark_context_new_with_command_queue(struct futhark_context_config *cfg,
                                        cl_command_queue queue);
void futhark_context_free(struct futhark_context *ctx);
int futhark_context_sync(struct futhark_context *ctx);
char *futhark_context_get_error(struct futhark_context *ctx);
void futhark_context_pause_profiling(struct futhark_context *ctx);
void futhark_context_unpause_profiling(struct futhark_context *ctx);
int futhark_context_clear_caches(struct futhark_context *ctx);
cl_command_queue futhark_context_get_command_queue(struct futhark_context *ctx);
/*
 * Arrays
*/

struct futhark_f32_1d ;
struct futhark_f32_1d *futhark_new_f32_1d(struct futhark_context *ctx,
                                          float *data, int64_t dim0);
struct futhark_f32_1d *futhark_new_raw_f32_1d(struct futhark_context *ctx,
                                              cl_mem data, int offset,
                                              int64_t dim0);
int futhark_free_f32_1d(struct futhark_context *ctx,
                        struct futhark_f32_1d *arr);
int futhark_values_f32_1d(struct futhark_context *ctx,
                          struct futhark_f32_1d *arr, float *data);
cl_mem futhark_values_raw_f32_1d(struct futhark_context *ctx,
                                 struct futhark_f32_1d *arr);
int64_t *futhark_shape_f32_1d(struct futhark_context *ctx,
                              struct futhark_f32_1d *arr);
struct futhark_f32_2d ;
struct futhark_f32_2d *futhark_new_f32_2d(struct futhark_context *ctx,
                                          float *data, int64_t dim0,
                                          int64_t dim1);
struct futhark_f32_2d *futhark_new_raw_f32_2d(struct futhark_context *ctx,
                                              cl_mem data, int offset,
                                              int64_t dim0, int64_t dim1);
int futhark_free_f32_2d(struct futhark_context *ctx,
                        struct futhark_f32_2d *arr);
int futhark_values_f32_2d(struct futhark_context *ctx,
                          struct futhark_f32_2d *arr, float *data);
cl_mem futhark_values_raw_f32_2d(struct futhark_context *ctx,
                                 struct futhark_f32_2d *arr);
int64_t *futhark_shape_f32_2d(struct futhark_context *ctx,
                              struct futhark_f32_2d *arr);
struct futhark_f32_3d ;
struct futhark_f32_3d *futhark_new_f32_3d(struct futhark_context *ctx,
                                          float *data, int64_t dim0,
                                          int64_t dim1, int64_t dim2);
struct futhark_f32_3d *futhark_new_raw_f32_3d(struct futhark_context *ctx,
                                              cl_mem data, int offset,
                                              int64_t dim0, int64_t dim1,
                                              int64_t dim2);
int futhark_free_f32_3d(struct futhark_context *ctx,
                        struct futhark_f32_3d *arr);
int futhark_values_f32_3d(struct futhark_context *ctx,
                          struct futhark_f32_3d *arr, float *data);
cl_mem futhark_values_raw_f32_3d(struct futhark_context *ctx,
                                 struct futhark_f32_3d *arr);
int64_t *futhark_shape_f32_3d(struct futhark_context *ctx,
                              struct futhark_f32_3d *arr);
struct futhark_i32_1d ;
struct futhark_i32_1d *futhark_new_i32_1d(struct futhark_context *ctx,
                                          int32_t *data, int64_t dim0);
struct futhark_i32_1d *futhark_new_raw_i32_1d(struct futhark_context *ctx,
                                              cl_mem data, int offset,
                                              int64_t dim0);
int futhark_free_i32_1d(struct futhark_context *ctx,
                        struct futhark_i32_1d *arr);
int futhark_values_i32_1d(struct futhark_context *ctx,
                          struct futhark_i32_1d *arr, int32_t *data);
cl_mem futhark_values_raw_i32_1d(struct futhark_context *ctx,
                                 struct futhark_i32_1d *arr);
int64_t *futhark_shape_i32_1d(struct futhark_context *ctx,
                              struct futhark_i32_1d *arr);
struct futhark_i8_1d ;
struct futhark_i8_1d *futhark_new_i8_1d(struct futhark_context *ctx,
                                        int8_t *data, int64_t dim0);
struct futhark_i8_1d *futhark_new_raw_i8_1d(struct futhark_context *ctx,
                                            cl_mem data, int offset,
                                            int64_t dim0);
int futhark_free_i8_1d(struct futhark_context *ctx, struct futhark_i8_1d *arr);
int futhark_values_i8_1d(struct futhark_context *ctx, struct futhark_i8_1d *arr,
                         int8_t *data);
cl_mem futhark_values_raw_i8_1d(struct futhark_context *ctx,
                                struct futhark_i8_1d *arr);
int64_t *futhark_shape_i8_1d(struct futhark_context *ctx,
                             struct futhark_i8_1d *arr);
/*
 * Opaque values
*/

struct futhark_opaque_arr_association_1d ;
int futhark_free_opaque_arr_association_1d(struct futhark_context *ctx,
                                           struct futhark_opaque_arr_association_1d *obj);
struct futhark_opaque_arr_dXdt_1d ;
int futhark_free_opaque_arr_dXdt_1d(struct futhark_context *ctx,
                                    struct futhark_opaque_arr_dXdt_1d *obj);
struct futhark_opaque_arr_forceTorque_1d ;
int futhark_free_opaque_arr_forceTorque_1d(struct futhark_context *ctx,
                                           struct futhark_opaque_arr_forceTorque_1d *obj);
struct futhark_opaque_arr_rigid_1d ;
int futhark_free_opaque_arr_rigid_1d(struct futhark_context *ctx,
                                     struct futhark_opaque_arr_rigid_1d *obj);
struct futhark_opaque_box ;
int futhark_free_opaque_box(struct futhark_context *ctx,
                            struct futhark_opaque_box *obj);
/*
 * Entry points
*/

int futhark_entry_rodNetworkPairInteraction(struct futhark_context *ctx,
                                            struct futhark_opaque_arr_forceTorque_1d **out0,
                                            const float in0, const float in1,
                                            const struct futhark_f32_2d *in2,
                                            const struct futhark_f32_3d *in3,
                                            const struct futhark_f32_2d *in4,
                                            const
                                            struct futhark_opaque_box *in5,
                                            const
                                            struct futhark_opaque_arr_rigid_1d *in6,
                                            const
                                            struct futhark_opaque_arr_association_1d *in7);
int futhark_entry_asgd(struct futhark_context *ctx, float *out0,
                       struct futhark_f32_2d **out1,
                       struct futhark_f32_3d **out2,
                       struct futhark_f32_2d **out3, const float in0, const
                       float in1, const float in2, const float in3, const
                       float in4, const int32_t in5, const int32_t in6, const
                       struct futhark_f32_2d *in7, const
                       struct futhark_f32_3d *in8, const
                       struct futhark_f32_2d *in9, const
                       struct futhark_f32_2d *in10, const
                       struct futhark_f32_2d *in11, const int32_t in12);
int futhark_entry_testNet(struct futhark_context *ctx, float *out0, const
                          struct futhark_f32_2d *in0, const
                          struct futhark_f32_3d *in1, const
                          struct futhark_f32_2d *in2, const
                          struct futhark_f32_2d *in3, const
                          struct futhark_f32_2d *in4);
int futhark_entry_bulkEval(struct futhark_context *ctx,
                           struct futhark_f32_2d **out0, const
                           struct futhark_f32_2d *in0, const
                           struct futhark_f32_3d *in1, const
                           struct futhark_f32_2d *in2, const
                           struct futhark_f32_2d *in3);